Fix overflow

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -74,6 +74,7 @@ a:visited {
     line-height: 2em;
     background-color: #00000055;
     padding: 40px;
+    overflow: auto;
 }
 
 .post-content * {
